Add images and edit recipes
The images for the recipes were missing. Added ingredients and step by step guides to lasagna, taco and schnitzel.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,22 @@
 <body>
     <a href="../index.html">Homepage</a>
     <h1>Lasagna</h1>
+    <img src="../img/lasagna.jpg" alt="Lasagna" width="500"/>
+    <p>This is how to make lasagna.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Pasta</li>
+        <li>Milk</li>
+        <li>Minced meat</li>
+        <li>Cheese</li>
+    </ul>
+    <h2>Step by step guide</h2>
+    <ol>
+        <li>Prepear stuff</li>
+        <li>Cook stuff</li>
+        <li>Combine stuff</li>
+        <li>Heat stuff</li>
+        <li>Eat stuff</li>
+    </ol>
 </body>
 </html>
