--- a/recipes/snitzel.html
+++ b/recipes/snitzel.html
@@ -3,10 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snitzel</title>
+    <title>Schnitzel</title>
 </head>
 <body>
     <a href="../index.html">Homepage</a>
-    <h1>Snitzel</h1>
+    <h1>Schnitzel</h1>
+    <img src="../img/schnitzel.jpg" alt="schnitzel" width="500"/>
+    <p>This is how to make schnitzel.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Meat</li>
+        <li>Egg</li>
+        <li>Grill spice</li>
+        <li>Flour</li>
+    </ul>
+    <h2>Step by step guide</h2>
+    <ol>
+        <li>Prepear stuff</li>
+        <li>Beat meat</li>
+        <li>Combine stuff</li>
+        <li>Cook stuff</li>
+        <li>Eat stuff</li>
+    </ol>
 </body>
 </html>
