--- a/recipes/taco.html
+++ b/recipes/taco.html
@@ -8,5 +8,22 @@
 <body>
     <a href="../index.html">Homepage</a>
     <h1>Taco</h1>
+    <img src="../img/taco.jpg" alt="Taco" width="500"/>
+    <p>This is how to make Taco.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Lefse</li>
+        <li>Cheese</li>
+        <li>Minced meat</li>
+        <li>Taco spice</li>
+        <li>salad</li>
+    </ul>
+    <h2>Step by step guide</h2>
+    <ol>
+        <li>Prepear stuff</li>
+        <li>Cook stuff</li>
+        <li>Combine stuff</li>
+        <li>Eat stuff</li>
+    </ol>
 </body>
 </html>
